# QualifiedCProgramming

./: .codex  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  _CoqProject  categories.json  categories.md  qide.vsix  run-example-linux.sh  run-example-windows.sh
.devcontainer/: devcontainer.json
QCP_examples/: array_auto.c  array_shape.strategies  avl_def.h  bst_def.h  bst_fp_def.h  bst_fp_delete.c  char_array.strategies  char_array_def.h  chars.c  dll_shape.strategies  dll_shape_def.h  eval.c  int_array.strategies  int_array_def.h  int_array_merge_rel.c  kmp_rel.c  los_sortlink.h  ptr_array.strategies  safeexecE_def.h  safeexec_def.h  swap.c  uint_array.strategies  undef_uint_array.strategies
QCP_examples/CAV/: README.md  (+2 more)
SeparationLogic/: .depend.core  .depend.examples  .depend.examples.applications  .depend.examples.llm_friendly_cases  .depend.examples.qcp_democases  Makefile  README.md  _CoqProject
linux-binary/: StrategyCheck  lsp  symexec
mac-arm64-binary/: StrategyCheck  lsp  mcp  symexec
mac-x86-64-binary/: StrategyCheck  lsp  mcp  symexec
mcp/: SKILL.md
mcp/rocq-mcp/: .mcp.json  README.md  pyproject.toml
mcp/rocq-mcp/src/rocq_mcp/: __init__.py  server.py  verify.py
mcp/rocq-mcp/src/rocq_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp/rocq-mcp/tests/: conftest.py  test_auto_solve.py  test_compile.py  test_format_error.py  test_integration.py  test_notations.py  test_query.py  test_step.py  test_step_at_pos.py  test_step_enhanced.py  test_step_multi.py  test_timeout.py  test_toc.py  test_verify.py
(+3958 files in other folders)
