[project]
name = "rocq-mcp"
version = "0.2.0"
description = "MCP server for Rocq/Coq proof development"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.0",
]

[project.optional-dependencies]
interactive = [
    "pytanque @ git+https://github.com/LLM4Rocq/pytanque",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "black>=24.0",
]

[project.scripts]
rocq-mcp = "rocq_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
